raw json input fix

--- a/dd_vis.html
+++ b/dd_vis.html
@@ -380,7 +380,7 @@
           <div id="input-tab" class="tab-content">
               <h2>Input metadata</h2>
               <h3>Raw JSON input:</h3>
-              <textarea id="input_json">Add custom JSON here...</textarea>
+              <textarea id="input_json" height="300"></textarea>
               <input type="submit" id="input_json_btn" value="Reload"/>
               <h3>Stats:</h3>
               <div id="data_summary" class="info"></div>
