--- a/dd_vis.html
+++ b/dd_vis.html
@@ -355,9 +355,8 @@ function arrangePalettes(){
  <div id="toppal" class="palette">
   <div>
    <img src="lucidlogo.png" class="bigtitle"/>
-   <img src="bjslogo.png" class="smalltitle"/>
+   <div class="byline">Data lineage made lucid.</div>
  </div>
- <p/>
  <div>
   <input type="submit" id="king_filter" class="kingbutton" value="Filter"/>
   <input type="submit" id="king_vis" class="kingbutton" value="Vis"/>
