Restored Lucid style

--- a/dd_vis.html
+++ b/dd_vis.html
@@ -1,7 +1,7 @@
 
 <html>                                                                  
 <head>      
-  <title>CR MIS Data Management Tool</title>
+  <title>BJS Lucid</title>
 
 
   <link rel="stylesheet" href="dd_styles.css">
@@ -365,8 +365,8 @@ function arrangePalettes(){
 
  <div id="toppal" class="palette">
   <div>
-   <img src="santander_400.jpg" class="bigtitle"/>
-   <div class="byline">RDA Data Lineage.</div>
+   <img src="lucidlogo.png" class="bigtitle"/>
+   <div class="byline">Transparency and insight.</div>
  </div>
  <div>
   <input type="submit" id="king_filter" class="kingbutton" value="Filter"/>
