updated cola view to ts

--- a/dd_vis.html
+++ b/dd_vis.html
@@ -400,7 +400,7 @@
 
             details += "<h3>Risk Characteristics:</h3><ul><li>Direct Risk: " + d.asset.risk + "</li></ul>";
 
-            details += "<h3>Timing Characteristics:</h3><ul><li>Available From: " + d.asset.effnotbefore  + "</li><li>Inherent Latency: " + d.asset.latency + "</li><li>Inherent Earliest: " + d.asset.notbefore + "</li></ul>";
+            details += "<h3>Timing Characteristics:</h3><ul><li>Available From:  Day " + d.asset.effnotbefore  + "</li><li>Inherent Latency: " + d.asset.latency + " Days </li><li>Theoretical Earliest: Day " + d.asset.notbefore + "</li></ul>";
             }
           
           else {
@@ -426,7 +426,7 @@
   
     <nav id="menu-wrap">    
 	<ul id="menu">
-		<li id="menu-special"><img src="lucidlogo.png" style="margin-left: 10px;margin-right:10px;height:35px;"/> </li>
+		<li id="menu-special"><img src="kinlogo2.png" style="margin-left: 10px;margin-right:10px;height:35px;"/> </li>
 		
 		<li>
 			<a href="#">Windows</a>
