more rendering unification

--- a/dd_vis.html
+++ b/dd_vis.html
@@ -174,7 +174,7 @@
         var el_assets = $("#ctrl_el_assets").val().trim();
         var el_internal = $("#ctrl_el_internal")[0].checked;
         
-        theSquash = new bjs.squash(el_fields, el_assets, el_internal);
+        theSquash = new bjs.squash(el_fields, el_assets, cr_assets, el_internal);
 
         refresh();
       });
