--- a/dd_vis.html
+++ b/dd_vis.html
@@ -88,10 +88,6 @@
     	bjs.hover = mouseOverHandler;
 
     	config = new bjs.config();
-    	config.color = d3.scale.ordinal().range( ["#1b9e77","#d95f02","#7570b3","#e7298a","#66a61e","#e6ab02","#a6761d","#666666"]);
-        config.detailColor = d3.scale.quantile().range( ["#ffffcc","#ffeda0","#fed976","#feb24c","#fd8d3c","#fc4e2a","#e31a1c","#bd0026","#800026"]).domain([0,1]);
-    	config.focus = "";
-
 
     	d3.select("#ctrl_filter_btn").on("click", function(d) {
 
@@ -243,22 +239,27 @@
 
 
     		if (d.itemtype == "node") {
-    			name += "Field " + d.field.name + "<br/>";
-                name += d.field.fullname;
+    			name += "Field: " + d.field.name + "<br/>";
+                name += "ID: " + d.field.fullname;
 
     			summary += d.field.desc + "<br/>";
-    			summary += "Type: " + d.field.fieldtype + "<br/>";
+    			summary += "Type: " + d.field.type + "<br/>";
     			summary += "Found in dataset: " + d.field.asset.fullname + "<br/>";
-    			summary += "Criticality: " + d.field.critical + "<br/>";
-    			summary += (d.field.term == null)?"Not associated with a business term":"Term: " + d.field.term.name;
 
     			details += "<h3>Content:</h3><ul><li>Description: " + d.field.desc + "</li><li>Formula: " + d.field.formula + "</li></ul>";
 
-    			details += "<h3>Risk Characteristics:</h3><ul><li>Risk: " + d.field.effrisk + " (" + d.field.risk + " inherent, " + d.field.asset.risk + " from asset, " + (d.field.effrisk-(d.field.risk + d.field.asset.risk)) + " from upstream)</li>";
-    			details += "<li>Quality: " + (d.field.effquality*100).toPrecision(2) + "% (" + (d.field.quality*100).toPrecision(2) + "% inherent, " + ((d.field.effquality-d.field.quality)*100).toPrecision(2) + " from upstream)</li>";
-    			details += "<li>Importance: " + d.field.effimportance + " (" + d.field.importance + " inherent, " + (d.field.effimportance-d.field.importance) + " from downstream)</li></ul>";
+    			details += "<h3>Risk Characteristics:</h3><ul><li>Risk: " + d.field.effrisk + "</li>";
+    			details += "<li>Quality/Error: " + (d.field.effquality*100).toFixed(2) + "</li></ul>";
+
+                details += "<h3>Other:</h3>";
+                if(d.field.effnolineage) details += "Lineage is incomplete.<br/>";
+                details += "Available from day " + d.field.asset.effnotbefore + "<br/>";
+                if(d.field.flags.search("logical") != -1) details += "This field is a placeholder, not a physical field."
 
     			stats += "<h3>Debugging:</h3><ul><li>Ldepth: " + d.field.ldepth + "</li><li>Rdepth: " + d.field.rdepth + "</li></ul>";
+                stats += "<h3>Risk Characteristics:</h3><ul><li>Risk: " + d.field.effrisk + " (" + d.field.risk + " inherent, " + d.field.asset.risk + " from asset, " + (d.field.effrisk-(d.field.risk + d.field.asset.risk)) + " from upstream)</li>";
+                stats += "<li>Quality: " + (d.field.effquality*100).toFixed(2) + "% (" + (d.field.quality*100).toFixed(2) + "% inherent, " + ((d.field.effquality-d.field.quality)*100).toFixed(2) + " from upstream)</li>";
+                stats += "<li>Importance: " + d.field.effimportance + " (" + d.field.importance + " inherent, " + (d.field.effimportance-d.field.importance) + " from downstream)</li></ul>";
 
     			if(d.field.term != null){
     				terms += "<h3>Business Term:</h3>Code: " + d.field.term.code + "<br/>Name: " + d.field.term.name + "<br/>Definition: " + d.field.term.desc;
@@ -284,7 +285,7 @@
 
     				details += "<h3>Timing Characteristics:</h3><ul><li>Available From:  Day " + d.asset.effnotbefore  + "</li><li>Inherent Latency: " + d.asset.latency + " Days </li><li>Theoretical Earliest: Day " + d.asset.notbefore + "</li></ul>";
 
-    				details += "<h3>Debugging:</h3><ul><li>Ldepth: " + d.asset.ldepth + "</li><li>Rdepth: " + d.asset.rdepth + "</li></ul>";
+    				stats += "<h3>Debugging:</h3><ul><li>Ldepth: " + d.asset.ldepth + "</li><li>Rdepth: " + d.asset.rdepth + "</li></ul>";
     			}
 
     			else {
@@ -304,6 +305,8 @@
     	d3.select("#object_name").html(name);
     	d3.select("#object_summary").html(summary);
     	d3.select("#object_details").html(details);
+        d3.select("#object_stats").html(stats);
+        d3.select("#object_terms").html(terms);
     }
 </script>
 </head>
